--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title> Martin personal work help</title>
+  <title> Martin personal</title>
 </head>
 <table cellspacing="20">
   <tr>
