--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
 <h1>Kontaky</h1>
 
 <body>
-  <p><strong>Telefónne číslo:</strong><em>0915 500061</em></p><br>
+  <p><strong>Telefónne číslo:</strong><em></em></p><br>
   <p><strong>email:</strong><em>psoty.maxo@gmail.com</em><br>
     martin.psota.1989@gmail.com</p><br>
     <hr>
