--- a/contacts.html
+++ b/contacts.html
@@ -9,8 +9,8 @@
 
 <body>
   <p><strong>Telefónne číslo:</strong><em></em></p><br>
-  <p><strong>email:</strong><em>psoty.maxo@gmail.com</em><br>
-    martin.psota.1989@gmail.com</p><br>
+  <p><strong>email:</strong><em></em><br>
+    </p><br>
     <hr>
     <form  action="mailto:martin.psota.1989@gmail.com" method="post" enctype="text/plain">
       <label for="name">Meno:</label>
